Preparacao para Segunda Parte

--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,7 @@
     "try:\n",
     "    file_name = file_name_externo\n",
     "except:\n",
-    "    file_name = \"input_c.txt\"\n",
-    "# file_name = \"example_1.txt\"\n",
+    "    file_name = \"exemplo1.txt\"\n",
     "try:\n",
     "    codigo_entrada = open(file_path + file_name, \"r\", encoding=\"utf8\").read()\n",
     "except:\n",
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,36 +110,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['n', 'u', 'd', ':', 'm', '=', '+', 'i']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Encontrar\n",
     "regex_terminais = r\"[\\[\\]a-z+:=*-/;]\"\n",
     "matches = re.finditer(regex_terminais, codigo_entrada.replace(\"->\",\" \"), re.MULTILINE)\n",
-    "variaveis = []\n",
+    "variaveis_terminais = []\n",
     "for match in matches:\n",
-    "    variaveis.append(match.group())\n",
+    "    variaveis_terminais.append(match.group())\n",
     "\n",
-    "variaveis_terminais = list(set(variaveis))\n",
-    "\n",
-    "variaveis_terminais"
+    "variaveis_terminais = list(dict.fromkeys(variaveis_terminais))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['+', 'num', 'id', ':=']"
+       "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['+', 'num', 'id', ':=']"
+       "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,34 +209,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regex_nao_terminais = r\"[A-Z]\"\n",
+    "matches = re.finditer(regex_nao_terminais, codigo_entrada.replace(\"->\",\" \"), re.MULTILINE)\n",
+    "variaveis_nao_terminais = []\n",
+    "for match in matches:\n",
+    "    variaveis_nao_terminais.append(match.group())\n",
+    "\n",
+    "# variaveis_nao_terminais = list(dict.fromkeys(variaveis_nao_terminais))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['S', 'X', 'E']"
+       "['S', 'A', 'C', 'B', 'C', 'B', 'B', 'A', 'B', 'C', 'B', 'C']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regex_nao_terminais = r\"[A-Z]\"\n",
-    "matches = re.finditer(regex_nao_terminais, codigo_entrada.replace(\"->\",\" \"), re.MULTILINE)\n",
-    "variaveis = []\n",
-    "for match in matches:\n",
-    "    variaveis.append(match.group())\n",
-    "\n",
-    "variaveis_nao_terminais = list(set(variaveis))\n",
     "variaveis_nao_terminais"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,16 +280,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': ['id := E'], 'E': ['idX', 'num'], 'X': ['+numX', '+idX', 'λ']}"
+       "{'S': ['ACB', 'CbB', 'Ba'],\n",
+       " 'A': ['da', 'BC'],\n",
+       " 'B': ['g', 'λ'],\n",
+       " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,34 +319,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'S': ['ACB', 'CbB', 'Ba'],\n",
+       " 'A': ['da', 'BC'],\n",
+       " 'B': ['g', 'λ'],\n",
+       " 'C': ['h', 'λ']}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "production"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'S': [], 'A': [], 'B': [], 'C': []}"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'S': [], 'A': [], 'B': [], 'C': []}"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "follow_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,25 +465,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'S': ['ACB', 'CbB', 'Ba'],\n",
+       " 'A': ['da', 'BC'],\n",
+       " 'B': ['g', 'λ'],\n",
+       " 'C': ['h', 'λ']}"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "production"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'S': [], 'A': [], 'B': [], 'C': []}"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "follow_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,9 +578,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['h', 'λ', 'g'], ['b'], ['a']]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Remover chaves de tamanho maior que um\n",
     "\n",
@@ -532,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,6 +673,108 @@
     "    df.to_csv(nome_arquivo_saida, index = False)\n",
     "except:\n",
     "    print(\"Não pode salvar aquivo de saída\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variavel</th>\n",
+       "      <th>Producao</th>\n",
+       "      <th>First</th>\n",
+       "      <th>Follow</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S</td>\n",
+       "      <td>{ACB,CbB,Ba}</td>\n",
+       "      <td>{a,λ,g,h,d,b}</td>\n",
+       "      <td>{$}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>{da,BC}</td>\n",
+       "      <td>{h,g,λ,d}</td>\n",
+       "      <td>{h,g,$}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>{h,λ}</td>\n",
+       "      <td>{h,λ}</td>\n",
+       "      <td>{$,g,h,b}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B</td>\n",
+       "      <td>{g,λ}</td>\n",
+       "      <td>{λ,g}</td>\n",
+       "      <td>{$,a,g,h}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Variavel      Producao          First     Follow\n",
+       "0        S  {ACB,CbB,Ba}  {a,λ,g,h,d,b}        {$}\n",
+       "1        A       {da,BC}      {h,g,λ,d}    {h,g,$}\n",
+       "2        C         {h,λ}          {h,λ}  {$,g,h,b}\n",
+       "3        B         {g,λ}          {λ,g}  {$,a,g,h}"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['S', 'A', 'C', 'B']"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variaveis_nao_terminais"
    ]
   },
   {
