Alterando modo de Obtenção das Variáves Não Terminais

--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "5"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,31 +209,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regex_nao_terminais = r\"[A-Z]\"\n",
-    "matches = re.finditer(regex_nao_terminais, codigo_entrada.replace(\"->\",\" \"), re.MULTILINE)\n",
-    "variaveis_nao_terminais = []\n",
-    "for match in matches:\n",
-    "    variaveis_nao_terminais.append(match.group())\n",
-    "\n",
-    "# variaveis_nao_terminais = list(dict.fromkeys(variaveis_nao_terminais))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['S', 'A', 'C', 'B', 'C', 'B', 'B', 'A', 'B', 'C', 'B', 'C']"
+       "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# regex_nao_terminais = r\"[A-Z]\"\n",
+    "regex_nao_terminais = r\".+?(?=->)\"\n",
+    "matches = re.finditer(regex_nao_terminais, codigo_entrada, re.MULTILINE)\n",
+    "variaveis_nao_terminais = []\n",
+    "for match in matches:\n",
+    "    variaveis_nao_terminais.append(match.group().strip())\n",
+    "\n",
+    "variaveis_nao_terminais\n",
+    "# variaveis_nao_terminais = list(dict.fromkeys(variaveis_nao_terminais))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['S', 'A', 'B', 'C']"
+      ]
+     },
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +264,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['S', 'A', 'B', 'C']"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variaveis_nao_terminais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +332,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +371,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +391,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +411,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +517,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +537,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +627,7 @@
        "[['h', 'λ', 'g'], ['b'], ['a']]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -724,17 +764,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>C</td>\n",
-       "      <td>{h,λ}</td>\n",
-       "      <td>{h,λ}</td>\n",
-       "      <td>{$,g,h,b}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>B</td>\n",
        "      <td>{g,λ}</td>\n",
        "      <td>{λ,g}</td>\n",
        "      <td>{$,a,g,h}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C</td>\n",
+       "      <td>{h,λ}</td>\n",
+       "      <td>{h,λ}</td>\n",
+       "      <td>{$,g,h,b}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -744,11 +784,11 @@
        "  Variavel      Producao          First     Follow\n",
        "0        S  {ACB,CbB,Ba}  {a,λ,g,h,d,b}        {$}\n",
        "1        A       {da,BC}      {h,g,λ,d}    {h,g,$}\n",
-       "2        C         {h,λ}          {h,λ}  {$,g,h,b}\n",
-       "3        B         {g,λ}          {λ,g}  {$,a,g,h}"
+       "2        B         {g,λ}          {λ,g}  {$,a,g,h}\n",
+       "3        C         {h,λ}          {h,λ}  {$,g,h,b}"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,23 +798,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 116,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['S', 'A', 'C', 'B']"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "variaveis_nao_terminais"
+    "#### Primeira Tabela Resultante"
    ]
   },
   {
