--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_dict(dictionary):\n",
+    "    for key, value in dictionary.items():\n",
+    "        print(key + \" : \" + listToString(value))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -41,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +109,7 @@
        "5"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +182,7 @@
        "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +209,7 @@
        "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +229,7 @@
        "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +264,7 @@
        "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +284,7 @@
        "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +343,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +382,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +402,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +422,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +528,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +548,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +638,7 @@
        "[['h', 'λ', 'g'], ['b'], ['a']]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +799,7 @@
        "3        C         {h,λ}          {h,λ}  {$,g,h,b}"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,6 +813,218 @@
    "metadata": {},
    "source": [
     "#### Primeira Tabela Resultante"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['b', 'a', 'd', 'g', 'h']"
+      ]
+     },
+     "execution_count": 346,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variaveis_terminais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colunas = variaveis_terminais.copy()\n",
+    "colunas.insert(0,'M(V,T)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'λ', '$', 'g', 'h', 'd', 'b']"
+      ]
+     },
+     "execution_count": 352,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1 = pd.DataFrame(columns=colunas)\n",
+    "df_1['M(V,T)'] = variaveis_nao_terminais\n",
+    "df_1.index = df_1['M(V,T)']\n",
+    "\n",
+    "def find_expression(key, var, prod):\n",
+    "    ### Definir lista de procura\n",
+    "    search = first_dict[key]\n",
+    "\n",
+    "    if 'λ' in search:\n",
+    "        search = merge_lists(search, follow_dict[key])\n",
+    "    \n",
+    "    return search\n",
+    "    # saida = ''\n",
+    "    # for elem in prod[key]:   \n",
+    "    #     if var in elem:\n",
+    "    #         saida = saida + key + \" -> \" + elem\n",
+    "    \n",
+    "    # return saida\n",
+    "\n",
+    "find_expression('S','a',production)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>M(V,T)</th>\n",
+       "      <th>b</th>\n",
+       "      <th>a</th>\n",
+       "      <th>d</th>\n",
+       "      <th>g</th>\n",
+       "      <th>h</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M(V,T)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td></td>\n",
+       "      <td>S -&gt; CbB</td>\n",
+       "      <td>S -&gt; Ba</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>A -&gt; da</td>\n",
+       "      <td>A -&gt; da</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>B -&gt; g</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>C -&gt; h</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       M(V,T)         b        a        d       g       h\n",
+       "M(V,T)                                                   \n",
+       "               S -> CbB  S -> Ba                         \n",
+       "                         A -> da  A -> da                \n",
+       "                                           B -> g        \n",
+       "                                                   C -> h"
+      ]
+     },
+     "execution_count": 295,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for index in df_1.index:\n",
+    "    for colum in df_1.columns:\n",
+    "        df_1.loc[index, colum] = find_in_production(index,colum,production)\n",
+    "\n",
+    "df_1       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
