--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 920,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 711,
+   "execution_count": 921,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 712,
+   "execution_count": 922,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 713,
+   "execution_count": 923,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 714,
+   "execution_count": 924,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 715,
+   "execution_count": 925,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 716,
+   "execution_count": 926,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 717,
+   "execution_count": 927,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "5"
       ]
      },
-     "execution_count": 717,
+     "execution_count": 927,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 718,
+   "execution_count": 928,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 719,
+   "execution_count": 929,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 720,
+   "execution_count": 930,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 720,
+     "execution_count": 930,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 721,
+   "execution_count": 931,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 721,
+     "execution_count": 931,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 722,
+   "execution_count": 932,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 722,
+     "execution_count": 932,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 933,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 723,
+     "execution_count": 933,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 724,
+   "execution_count": 934,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 724,
+     "execution_count": 934,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 725,
+   "execution_count": 935,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 726,
+   "execution_count": 936,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 727,
+   "execution_count": 937,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 727,
+     "execution_count": 937,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 728,
+   "execution_count": 938,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 729,
+   "execution_count": 939,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 729,
+     "execution_count": 939,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 730,
+   "execution_count": 940,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 730,
+     "execution_count": 940,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 941,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 731,
+     "execution_count": 941,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 732,
+   "execution_count": 942,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 943,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 944,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 945,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 735,
+     "execution_count": 945,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 946,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 736,
+     "execution_count": 946,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 947,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 948,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 949,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "[['h', 'g', 'λ'], ['b'], ['a']]"
       ]
      },
-     "execution_count": 739,
+     "execution_count": 949,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 950,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 951,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 742,
+   "execution_count": 952,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
+   "execution_count": 953,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 954,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 745,
+   "execution_count": 955,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 956,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 957,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "3        C         {h,λ}          {h,λ}  {h,g,b,$}"
       ]
      },
-     "execution_count": 747,
+     "execution_count": 957,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 748,
+   "execution_count": 958,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 959,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 960,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "C           C  NaN  NaN  NaN  NaN  NaN"
       ]
      },
-     "execution_count": 750,
+     "execution_count": 960,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 751,
+   "execution_count": 961,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 962,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,97 +976,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['A', 'da', 'd'],\n",
-       " ['B', 'g', 'g'],\n",
-       " ['B', 'λ', 'λ'],\n",
-       " ['C', 'h', 'h'],\n",
-       " ['C', 'λ', 'λ'],\n",
-       " ['A', 'BC', ['h', 'g', 'λ']],\n",
-       " ['CB', 'CB', ['h', 'g', 'λ']],\n",
-       " ['S', 'ACB', ['h', 'g', 'λ', 'd']],\n",
-       " ['bB', 'bB', 'b'],\n",
-       " ['S', 'CbB', ['h', 'b']],\n",
-       " ['a', 'a', 'a'],\n",
-       " ['S', 'Ba', ['g', 'a']]]"
-      ]
-     },
-     "execution_count": 753,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lista_first_por_elem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 761,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "merge_lists(['h', 'g', 'λ'],follow_set(A))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['h', 'g', 'λ', '$']"
-      ]
-     },
-     "execution_count": 761,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "row = lista_first_por_elem[5]\n",
-    "print(f'merge_lists({row[2]},follow_set({row[0]}))')\n",
-    "lista = merge_lists(row[2],follow_set(row[0]))   \n",
-    "lista"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 762,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['h', 'g', 'λ', 'd']"
-      ]
-     },
-     "execution_count": 762,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first_dict[row[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": 969,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Tratar casos onde a produção é vazia -> Usar elementos do follow\n",
     "\n",
     "for row in lista_first_por_elem:\n",
-    "    if 'λ' in row[2]:\n",
-    "        lista = merge_lists(row[2],follow_set(row[0]))        \n",
-    "        row[2] = [elem for elem in lista if elem != 'λ' and elem not in first_dict[row[0]]]\n",
+    "    if 'λ' in row[1]:\n",
+    "        lista_follow = follow_set(row[0])\n",
+    "        lista_follow = [elem for elem in lista_follow if elem not in first_dict[row[0]]]\n",
+    "        lista = merge_lists(row[2],lista_follow)        \n",
+    "        row[2] = [elem for elem in lista if elem != 'λ']\n",
+    "    else:\n",
+    "        if 'λ' in row[2]:\n",
+    "            lista_follow = follow_set(row[0])\n",
+    "            lista_follow = [elem for elem in lista_follow if elem not in first_dict[row[0]]]\n",
+    "            lista = merge_lists(row[2],lista_follow)        \n",
+    "            row[2] = [elem for elem in lista if elem != 'λ']\n",
+    "        \n",
     "\n",
     "### Eliminar Variaves Não Terminais Erradas\n",
     "\n",
@@ -1075,35 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['A', 'da', 'd'],\n",
-       " ['B', 'g', 'g'],\n",
-       " ['B', 'λ', ['g']],\n",
-       " ['C', 'h', 'h'],\n",
-       " ['C', 'λ', ['h']],\n",
-       " ['A', 'BC', ['h', 'g']],\n",
-       " ['S', 'ACB', ['h', 'g', 'd']],\n",
-       " ['S', 'CbB', ['h', 'b']],\n",
-       " ['S', 'Ba', ['g', 'a']]]"
-      ]
-     },
-     "execution_count": 764,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lista_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 658,
+   "execution_count": 971,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 972,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1054,7 @@
        "      <td>S</td>\n",
        "      <td>S-&gt;CbB</td>\n",
        "      <td>S-&gt;Ba</td>\n",
-       "      <td>-</td>\n",
+       "      <td>S-&gt;ACB</td>\n",
        "      <td>S-&gt;Ba</td>\n",
        "      <td>S-&gt;CbB</td>\n",
        "      <td>S-&gt;ACB</td>\n",
@@ -1165,8 +1065,8 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>A-&gt;da</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>A-&gt;BC</td>\n",
+       "      <td>A-&gt;BC</td>\n",
        "      <td>A-&gt;BC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1194,14 +1094,14 @@
        "</div>"
       ],
       "text/plain": [
-       "  M(V,T)       b      a      d      g       h       $\n",
-       "0      S  S->CbB  S->Ba      -  S->Ba  S->CbB  S->ACB\n",
-       "1      A       -      -  A->da      -       -   A->BC\n",
-       "2      B       -   B->λ      -   B->g    B->λ    B->λ\n",
-       "3      C    C->λ      -      -   C->λ    C->h    C->λ"
+       "  M(V,T)       b      a       d      g       h       $\n",
+       "0      S  S->CbB  S->Ba  S->ACB  S->Ba  S->CbB  S->ACB\n",
+       "1      A       -      -   A->da  A->BC   A->BC   A->BC\n",
+       "2      B       -   B->λ       -   B->g    B->λ    B->λ\n",
+       "3      C    C->λ      -       -   C->λ    C->h    C->λ"
       ]
      },
-     "execution_count": 659,
+     "execution_count": 972,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,198 +1112,6 @@
     "df_1 = df_1.reset_index(drop=True).fillna('-')\n",
     "df_1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 560,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['A', 'da', 'd'],\n",
-       " ['B', 'g', 'g'],\n",
-       " ['B', 'λ', ['h', 'g', 'a', '$']],\n",
-       " ['C', 'h', 'h'],\n",
-       " ['C', 'λ', ['h', 'b', 'g', '$']],\n",
-       " ['A', 'BC', ['h', 'g', '$']],\n",
-       " ['CB', 'CB', ['h', 'g', '$']],\n",
-       " ['S', 'ACB', ['h', 'g', '$', 'd']],\n",
-       " ['bB', 'bB', 'b'],\n",
-       " ['S', 'CbB', ['h', 'b']],\n",
-       " ['a', 'a', 'a'],\n",
-       " ['S', 'Ba', ['g', 'a']],\n",
-       " ['a', 'a', 'a'],\n",
-       " ['CB', 'CB', ['h', 'g', '$']],\n",
-       " ['bB', 'bB', 'b']]"
-      ]
-     },
-     "execution_count": 560,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lista_first_por_elem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_expression(key, var, prod):\n",
-    "    ### Definir lista de procura\n",
-    "    search = first_dict[key]\n",
-    "    saida = ''\n",
-    "\n",
-    "    if 'λ' in search:\n",
-    "        search = merge_lists(search, follow_dict[key])\n",
-    "    \n",
-    "    for elem in search:\n",
-    "        ## Checar se está na producao:\n",
-    "        if elem in listToString(production[key]):\n",
-    "            for valor in production[key]:\n",
-    "                if elem in valor:\n",
-    "                    saida = saida + valor\n",
-    "\n",
-    "    return saida\n",
-    "    # saida = ''\n",
-    "    # for elem in prod[key]:   \n",
-    "    #     if var in elem:\n",
-    "    #         saida = saida + key + \" -> \" + elem\n",
-    "    \n",
-    "    # return saida\n",
-    "\n",
-    "find_expression('S','a',production)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'a' in listToString(production['S'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "production['S']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'a' in listToString(production['S']).index('a')\n",
-    "\n",
-    "listToString(production['S'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_lists"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "production[df_1.index[0]][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first_set(production[df_1.index[0]][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Todos as produções vão para seu FIRST\n",
-    "### As Vazio vão para o follow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key, value in production.items():\n",
-    "    first_set(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Olhar todas as produções\n",
-    "production"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for index in df_1.index:\n",
-    "    for colum in df_1.columns:\n",
-    "        \n",
-    "        df_1.loc[index, colum] = index + colum\n",
-    "\n",
-    "df_1       "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
