Inicio da Terceira Tabela

--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -1115,11 +1115,519 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 987,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### Tabela de Verificação\n",
+    "palavra = 'dahg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1004,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def juntar_lista(lista):\n",
+    "    saida = ''\n",
+    "    for elem in lista:\n",
+    "        saida = saida + elem\n",
+    "    return saida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1019,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pilha</th>\n",
+       "      <th>Entrada</th>\n",
+       "      <th>Producao</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$</td>\n",
+       "      <td>$</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>$S</td>\n",
+       "      <td>dahg$</td>\n",
+       "      <td>S-&gt;ACB</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Pilha Entrada Producao\n",
+       "0     $       $        S\n",
+       "1    $S   dahg$   S->ACB"
+      ]
+     },
+     "execution_count": 1019,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2 = pd.DataFrame(columns=['Pilha','Entrada','Producao'])\n",
+    "\n",
+    "lista_pilha = ['$']\n",
+    "lista_entrada = ['$']\n",
+    "\n",
+    "df_2.loc[0] = [juntar_lista(lista_pilha),juntar_lista(lista_entrada),simbolo_inicial]\n",
+    "\n",
+    "i = 1\n",
+    "lista_pilha.insert(len(lista_pilha),simbolo_inicial)\n",
+    "lista_entrada.insert(0,palavra)\n",
+    "\n",
+    "cond = df_1['M(V,T)'] == simbolo_inicial\n",
+    "producao = df_1[cond][lista_entrada[0][0]][0]\n",
+    "\n",
+    "df_2.loc[i] = [juntar_lista(lista_pilha),juntar_lista(lista_entrada),producao]\n",
+    "\n",
+    "df_2\n",
+    "\n",
+    "# i = 2\n",
+    "\n",
+    "\n",
+    "# cond = df_1['M(V,T)'] == lista_pilha[-1]\n",
+    "# producao = df_1[cond][entrada[0]][0]\n",
+    "\n",
+    "# if (producao != ''):\n",
+    "    \n",
+    "#     ### Achar o conjunto a ser substituido\n",
+    "#     variavel_retirada = lista_pilha.pop()\n",
+    "#     cond = df_1['M(V,T)'] = variavel_retirada\n",
+    "\n",
+    "#     lista_pilha.insert(len(lista_pilha),simbolo_inicial)\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1017,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 1017,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_entrada[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1018,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    S->ACB\n",
+       "Name: d, dtype: object"
+      ]
+     },
+     "execution_count": 1018,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cond = df_1['M(V,T)'] == simbolo_inicial\n",
+    "producao = df_1[cond][lista_entrada[0][0]]\n",
+    "producao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 999,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pilha</th>\n",
+       "      <th>Entrada</th>\n",
+       "      <th>Producao</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$</td>\n",
+       "      <td>$</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>$S</td>\n",
+       "      <td>dahg$</td>\n",
+       "      <td>S-&gt;ACB</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Pilha Entrada Producao\n",
+       "0     $       $        S\n",
+       "1    $S   dahg$   S->ACB"
+      ]
+     },
+     "execution_count": 999,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2 = pd.DataFrame(columns=['Pilha','Entrada','Producao'])\n",
+    "\n",
+    "lista_pilha = ['$']\n",
+    "lista_entrada = ['$']\n",
+    "\n",
+    "pilha = [p for p in lista_pilha]\n",
+    "df_2.loc[0] = ['$','$',simbolo_inicial]\n",
+    "\n",
+    "#passo1\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "while range(0,10):\n",
+    "\n",
+    "    lista_pilha\n",
+    "\n",
+    "    pilha_anterior = df_2['Pilha'][indice]\n",
+    "    entrada_anterior = df_2['Entrada'][indice]\n",
+    "\n",
+    "    if i == 0:\n",
+    "        pilha = pilha_anterior + simbolo_inicial\n",
+    "    else:\n",
+    "        pilha = \n",
+    "    entrada = palavra + entrada_anterior\n",
+    "\n",
+    "\n",
+    "cond = df_1['M(V,T)'] == 'S'\n",
+    "producao = df_1[cond][entrada[0]][0]\n",
+    "\n",
+    "if producao == '-':\n",
+    "    break\n",
+    "else:\n",
+    "\n",
+    "\n",
+    "df_2.loc[indice + 1] = [pilha,entrada,producao]\n",
+    "\n",
+    "df_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1000,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>M(V,T)</th>\n",
+       "      <th>b</th>\n",
+       "      <th>a</th>\n",
+       "      <th>d</th>\n",
+       "      <th>g</th>\n",
+       "      <th>h</th>\n",
+       "      <th>$</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S</td>\n",
+       "      <td>S-&gt;CbB</td>\n",
+       "      <td>S-&gt;Ba</td>\n",
+       "      <td>S-&gt;ACB</td>\n",
+       "      <td>S-&gt;Ba</td>\n",
+       "      <td>S-&gt;CbB</td>\n",
+       "      <td>S-&gt;ACB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>A-&gt;da</td>\n",
+       "      <td>A-&gt;BC</td>\n",
+       "      <td>A-&gt;BC</td>\n",
+       "      <td>A-&gt;BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B</td>\n",
+       "      <td>-</td>\n",
+       "      <td>B-&gt;λ</td>\n",
+       "      <td>-</td>\n",
+       "      <td>B-&gt;g</td>\n",
+       "      <td>B-&gt;λ</td>\n",
+       "      <td>B-&gt;λ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C</td>\n",
+       "      <td>C-&gt;λ</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>C-&gt;λ</td>\n",
+       "      <td>C-&gt;h</td>\n",
+       "      <td>C-&gt;λ</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  M(V,T)       b      a       d      g       h       $\n",
+       "0      S  S->CbB  S->Ba  S->ACB  S->Ba  S->CbB  S->ACB\n",
+       "1      A       -      -   A->da  A->BC   A->BC   A->BC\n",
+       "2      B       -   B->λ       -   B->g    B->λ    B->λ\n",
+       "3      C    C->λ      -       -   C->λ    C->h    C->λ"
+      ]
+     },
+     "execution_count": 1000,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 997,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'S->ACB'"
+      ]
+     },
+     "execution_count": 997,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cond = df_1['M(V,T)'] == 'S'\n",
+    "df_1[cond][entrada[0]][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 993,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    S->ACB\n",
+       "Name: d, dtype: object"
+      ]
+     },
+     "execution_count": 993,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cond = df_1['M(V,T)'] == 'S'\n",
+    "df_1[cond]['d']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 991,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>M(V,T)</th>\n",
+       "      <th>b</th>\n",
+       "      <th>a</th>\n",
+       "      <th>d</th>\n",
+       "      <th>g</th>\n",
+       "      <th>h</th>\n",
+       "      <th>$</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S</td>\n",
+       "      <td>S-&gt;CbB</td>\n",
+       "      <td>S-&gt;Ba</td>\n",
+       "      <td>S-&gt;ACB</td>\n",
+       "      <td>S-&gt;Ba</td>\n",
+       "      <td>S-&gt;CbB</td>\n",
+       "      <td>S-&gt;ACB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>A-&gt;da</td>\n",
+       "      <td>A-&gt;BC</td>\n",
+       "      <td>A-&gt;BC</td>\n",
+       "      <td>A-&gt;BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B</td>\n",
+       "      <td>-</td>\n",
+       "      <td>B-&gt;λ</td>\n",
+       "      <td>-</td>\n",
+       "      <td>B-&gt;g</td>\n",
+       "      <td>B-&gt;λ</td>\n",
+       "      <td>B-&gt;λ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C</td>\n",
+       "      <td>C-&gt;λ</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>C-&gt;λ</td>\n",
+       "      <td>C-&gt;h</td>\n",
+       "      <td>C-&gt;λ</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  M(V,T)       b      a       d      g       h       $\n",
+       "0      S  S->CbB  S->Ba  S->ACB  S->Ba  S->CbB  S->ACB\n",
+       "1      A       -      -   A->da  A->BC   A->BC   A->BC\n",
+       "2      B       -   B->λ       -   B->g    B->λ    B->λ\n",
+       "3      C    C->λ      -       -   C->λ    C->h    C->λ"
+      ]
+     },
+     "execution_count": 991,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 980,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 980,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2.index.max()"
    ]
   },
   {
